--- a/app/views/help/about-our-services-gov-uk.html
+++ b/app/views/help/about-our-services-gov-uk.html
@@ -63,7 +63,7 @@
     </style>
 
     <div class="govuk-grid-row">
-        <main class="govuk-main-wrapper--auto-spacing">
+        <main class="govuk-main-wrapper">
 
             <div class="govuk-grid-column-two-thirds">
                 <h1 class="govuk-heading-xl">{{ hmpoTitle }}</h1>
@@ -169,5 +169,4 @@
             </div>
         </main>
     </div>
-
 {% endblock %}
