--- a/app/views/urgent/urgent-gov-uk.html
+++ b/app/views/urgent/urgent-gov-uk.html
@@ -40,80 +40,76 @@
 
 {# TODO: Update h1 and app-related-items styling to new GOV.UK styling #}
 {% block content %}
-    <div class="govuk-grid-row">
-        <main id="content" role="main" class="">
-            <header class="page-header govuk-grid-column-two-thirds">
-                <h1 class="govuk-heading-xl">{{ hmpoTitle }}</h1>
-                <p class="govuk-body-s">Contents</p>
-                <ul class="govuk-list govuk-list--dashed">
-                    <li>How to apply</li>
-                    <li><a href="./urgent-start">Online Premium service</a></li>
-                    <li><a href="./urgent-fast-track">1 week Fast Track service</a></li>
-                </ul>
-                <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-            </header>
+    <div class="govuk-width-container">
+        <main class="govuk-main-wrapper">
+            <div class="govuk-grid-row">
+                <header class="page-header govuk-grid-column-two-thirds">
+                    <h1 class="govuk-heading-xl">{{ hmpoTitle }}</h1>
+                    <p class="govuk-body-s">Contents</p>
+                    <ul class="govuk-list govuk-list--dashed">
+                        <li>How to apply</li>
+                        <li><a href="./urgent-start">Online Premium service</a></li>
+                        <li><a href="./urgent-fast-track">1 week Fast Track service</a></li>
+                    </ul>
+                    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+                </header>
+            </div>
 
-            <div class="govuk-grid-column-two-thirds-from-desktop">
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-two-thirds">
+                    <h2 class="govuk-heading-l">How to apply</h2>
+                    <p>You can pay for a faster service if you need a passport within 3 weeks.</p>
+                    <p>You’ll need to book an appointment at a <a href="https://www.passport.service.gov.uk/help/passport-offices/">passport office</a>. Appointments are available up to 3 weeks in advance.</p>
+                    <p>You can’t use these services if:</p>
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>you’re applying for a <a href="/start">first adult passport</a></li>
+                        <li>you’re outside the UK - apply for an <a href="https://www.gov.uk/emergency-travel-document">emergency travel document </a>instead </li>
+                    </ul>
 
-                <h2 class="govuk-heading-l">How to apply</h2>
-                <p>You can pay for a faster service if you need a passport within 3 weeks.</p>
-                <p>You’ll need to book an appointment at a <a href="https://www.passport.service.gov.uk/help/passport-offices/">passport office</a>. Appointments are available up to 3 weeks in advance.</p>
-                <p>You can’t use these services if:</p>
-                <ul class="govuk-list govuk-list--bullet">
-                    <li>you’re applying for a <a href="/start">first adult passport</a></li>
-                    <li>you’re outside the UK - apply for an <a href="https://www.gov.uk/emergency-travel-document">emergency travel document </a>instead </li>
-                </ul>
+                    <h2 class="govuk-heading-m">Ways to apply</h2>
+                    <p>There are 2 ways to apply for an urgent passport.</p>
 
-                <h2 class="govuk-heading-m">Ways to apply</h2>
-                <p>There are 2 ways to apply for an urgent passport.</p>
+                    <h3>Online Premium</h3>
+                    <p>Use this service if you’re renewing an adult passport, or if you’ve changed your name by marriage or civil partnership. </p>
+                    <p>The earliest appointment is 2 days from when you apply.</p>
+                    <p>You’ll need to apply, pay and book an appointment online.</p>
+                    <p>Your old passport and documents will be checked at your appointment. You’ll need to return 2 hours later to collect your new passport.</p>
+                    <p><a href="/urgent/urgent-start">Use the Online Premium service</a></p>
 
-                <h3>Online Premium</h3>
-                <p>Use this service if you’re renewing an adult passport, or if you’ve changed your name by marriage or civil partnership. </p>
-                <p>The earliest appointment is 2 days from when you apply.</p>
-                <p>You’ll need to apply, pay and book an appointment online.</p>
-                <p>Your old passport and documents will be checked at your appointment. You’ll need to return 2 hours later to collect your new passport.</p>
-                <p><a href="/urgent/urgent-start">Use the Online Premium service</a></p>
-
-                <h3>1 week Fast Track</h3>
-                <p>You can use this service to:</p>
-                <ul class="govuk-list govuk-list--bullet">
-                    <li>renew a passport</li>
-                    <li>change your name or personal details on your passport</li>
-                    <li>replace a lost, stolen or damaged passport</li>
-                    <li>get a child passport</li>
-                </ul>
-                <p>The earliest appointment is 7 days from when you apply.</p>
-                <p>You’ll need to go to a <a href="https://www.postoffice.co.uk/branch-finder">Post Office</a> to apply, pay and book an appointment at a passport office.</p>
-                <p>You’ll get your new passport at your appointment.</p>
-                <p><a href="./urgent-fast-track">Use the 1 week Fast Track service</a></p>
-
+                    <h3>1 week Fast Track</h3>
+                    <p>You can use this service to:</p>
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>renew a passport</li>
+                        <li>change your name or personal details on your passport</li>
+                        <li>replace a lost, stolen or damaged passport</li>
+                        <li>get a child passport</li>
+                    </ul>
+                    <p>The earliest appointment is 7 days from when you apply.</p>
+                    <p>You’ll need to go to a <a href="https://www.postoffice.co.uk/branch-finder">Post Office</a> to apply, pay and book an appointment at a passport office.</p>
+                    <p>You’ll get your new passport at your appointment.</p>
+                    <p><a href="./urgent-fast-track">Use the 1 week Fast Track service</a></p>
+                </div>
+                {% call hmpoSidebar({ classes: "hmpo-sidebar" }) %}
+                    <h3>Related content</h3>
+                    <ul style="font-size: 16px;">
+                        <li>
+                            <a href="https://www.gov.uk/renew-adult-passport">Renew or replace your adult passport</a>
+                        </li>
+                        <li>
+                            <a href="https://www.gov.uk/get-a-child-passport">Get a passport for your child</a>
+                        </li>
+                        <li>
+                            <a href="https://www.gov.uk/apply-first-adult-passport">Getting your first adult passport</a>
+                        </li>
+                        <li>
+                            <a href="https://www.gov.uk/report-a-lost-or-stolen-passport">Cancel a lost or stolen passport</a>
+                        </li>
+                        <li>
+                            <a href="https://www.gov.uk/passport-services-disabled">Passport services if you're disabled</a>
+                        </li>
+                    </ul>
+                {% endcall %}
             </div>
         </main>
-
-        <div class="govuk-grid-column-one-third-from-desktop app-related-items">
-            <h3 id="parent-subsection" style="margin-bottom: 10px;">Related content</h3>
-            <nav role="navigation" aria-labelledby="parent-subsection">
-                <ul style="font-size: 16px;">
-                    <li>
-                        <a href="https://www.gov.uk/renew-adult-passport">Renew or replace your adult passport</a>
-                    </li>
-                    <li>
-                        <a href="https://www.gov.uk/get-a-child-passport">Get a passport for your child</a>
-                    </li>
-                    <li>
-                        <a href="https://www.gov.uk/apply-first-adult-passport">Getting your first adult passport</a>
-                    </li>
-                    <li>
-                        <a href="https://www.gov.uk/report-a-lost-or-stolen-passport">Cancel a lost or stolen passport</a>
-                    </li>
-                    <li>
-                        <a href="https://www.gov.uk/passport-services-disabled">Passport services if you're disabled</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
     </div>
-  </div>
-</div>
-
 {% endblock %}
