--- a/app/views/urgent/urgent-start.html
+++ b/app/views/urgent/urgent-start.html
@@ -40,86 +40,84 @@
 
 {# TODO: Update h1 and app-related-items styling to new GOV.UK styling #}
 {% block content %}
-    <div class="govuk-grid-row">
-        <main id="content" role="main" class="">
-            <header class="page-header govuk-grid-column-two-thirds">
-                <h1 class="govuk-heading-xl">{{ hmpoTitle }}</h1>
-                <p class="govuk-body-s">Contents</p>
-                <ul class="govuk-list govuk-list--dashed">
-                    <li><a href="./urgent-gov-uk">How to apply</a></li>
-                    <li>Online Premium service</li>
-                    <li><a href="./urgent-fast-track">1 week Fast Track service</a></li>
-                </ul>
-                <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-            </header>
+    <div class="govuk-width-container">
+        <main class="govuk-main-wrapper">
+            <div class="govuk-grid-row">
+                <header class="page-header govuk-grid-column-two-thirds">
+                    <h1 class="govuk-heading-xl">{{ hmpoTitle }}</h1>
+                    <p class="govuk-body-s">Contents</p>
+                    <ul class="govuk-list govuk-list--dashed">
+                        <li><a href="./urgent-gov-uk">How to apply</a></li>
+                        <li>Online Premium service</li>
+                        <li><a href="./urgent-fast-track">1 week Fast Track service</a></li>
+                    </ul>
+                    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+                </header>
+            </div>
 
-            <div class="govuk-grid-column-two-thirds-from-desktop">
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-two-thirds">
 
-                <h2 class="govuk-heading-l">Online Premium</h2>
-                <p>You’ll need to book an appointment at a <a href="https://www.passport.service.gov.uk/help/passport-offices/">passport office</a>.</p>
-                <p>Take your old passport and any documents to your appointment to be checked. You’ll need to return 2 hours later to collect your new passport.</p>
+                    <h2 class="govuk-heading-l">Online Premium</h2>
+                    <p>You’ll need to book an appointment at a <a href="https://www.passport.service.gov.uk/help/passport-offices/">passport office</a>.</p>
+                    <p>Take your old passport and any documents to your appointment to be checked. You’ll need to return 2 hours later to collect your new passport.</p>
 
-                <h3 class="govuk-heading-m">What it costs</h3>
-                <p>It costs:</p>
-                <ul class="govuk-list govuk-list--bullet">
-                    <li>£177 (or £187 or a 50 page frequent traveller passport) for an appointment within the next 5 working days</li>
-                    <li>£142 (or £152 or a 50 page frequent traveller passport) for an appointment between 5 working days and 3 weeks</li>
-                </ul>
+                    <h3 class="govuk-heading-m">What it costs</h3>
+                    <p>It costs:</p>
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>£177 (or £187 or a 50 page frequent traveller passport) for an appointment within the next 5 working days</li>
+                        <li>£142 (or £152 or a 50 page frequent traveller passport) for an appointment between 5 working days and 3 weeks</li>
+                    </ul>
 
-                <h3 class="govuk-heading-m">Apply, book an appointment and pay</h3>
-                <p>To use the Online Premium service you’ll need:</p>
-                <ul class="govuk-list govuk-list--bullet">
-                    <li>your old passport</li>
-                    <li>a digital photo of you</li>
-                    <li>a credit or debit card</li>
-                </ul>     
-                  
-                {% call hmpoForm(ctx) %}
-                    {{ govukButton({
-                        text: "Start now",
-                        isStartButton: true
-                    }) }} 
-                {% endcall %}   
+                    <h3 class="govuk-heading-m">Apply, book an appointment and pay</h3>
+                    <p>To use the Online Premium service you’ll need:</p>
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>your old passport</li>
+                        <li>a digital photo of you</li>
+                        <li>a credit or debit card</li>
+                    </ul>     
+                    
+                    {% call hmpoForm(ctx) %}
+                        {{ govukButton({
+                            text: "Start now",
+                            isStartButton: true
+                        }) }} 
+                    {% endcall %}   
 
-                <h3 class="govuk-heading-m">What to bring to your appointment</h3>
-                <p>You need to bring your old passport.</p>
-                <p>You can ask someone else to go to your appointment for you. They’ll need to bring:</p>
-                <ul class="govuk-list govuk-list--bullet">
-                    <li>your old passport and any documents</li>
-                    <li>a signed and dated letter from you, naming them and giving them permission to collect the passport</li>
-                    <li>their ID or example a passport or driving licence</li>
-                </ul>   
+                    <h3 class="govuk-heading-m">What to bring to your appointment</h3>
+                    <p>You need to bring your old passport.</p>
+                    <p>You can ask someone else to go to your appointment for you. They’ll need to bring:</p>
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>your old passport and any documents</li>
+                        <li>a signed and dated letter from you, naming them and giving them permission to collect the passport</li>
+                        <li>their ID or example a passport or driving licence</li>
+                    </ul>   
 
-                <h3 class="govuk-heading-m">Changing your appointment</h3>
-                <p>Call the <a href="https://www.gov.uk/passport-advice-line">passport adviceline</a> to reschedule your appointment.</p>                     
-
+                    <h3 class="govuk-heading-m">Changing your appointment</h3>
+                    <p>Call the <a href="https://www.gov.uk/passport-advice-line">passport adviceline</a> to reschedule your appointment.</p>                     
+                </div>
+                {% call hmpoSidebar({ classes: "hmpo-sidebar" }) %}
+                    <h3>Related content</h3>
+                    <ul style="font-size: 16px;">
+                        <li>
+                            <a href="https://www.gov.uk/renew-adult-passport">Renew or replace your adult passport</a>
+                        </li>
+                        <li>
+                            <a href="https://www.gov.uk/get-a-child-passport">Get a passport for your child</a>
+                        </li>
+                        <li>
+                            <a href="https://www.gov.uk/apply-first-adult-passport">Getting your first adult passport</a>
+                        </li>
+                        <li>
+                            <a href="https://www.gov.uk/report-a-lost-or-stolen-passport">Cancel a lost or stolen passport</a>
+                        </li>
+                        <li>
+                            <a href="https://www.gov.uk/passport-services-disabled">Passport services if you're disabled</a>
+                        </li>
+                    </ul>
+                {% endcall %}
             </div>
         </main>
-
-        <div class="govuk-grid-column-one-third-from-desktop app-related-items">
-            <h3 id="parent-subsection" style="margin-bottom: 10px;">Related content</h3>
-            <nav role="navigation" aria-labelledby="parent-subsection">
-                <ul style="font-size: 16px;">
-                    <li>
-                        <a href="https://www.gov.uk/renew-adult-passport">Renew or replace your adult passport</a>
-                    </li>
-                    <li>
-                        <a href="https://www.gov.uk/get-a-child-passport">Get a passport for your child</a>
-                    </li>
-                    <li>
-                        <a href="https://www.gov.uk/apply-first-adult-passport">Getting your first adult passport</a>
-                    </li>
-                    <li>
-                        <a href="https://www.gov.uk/report-a-lost-or-stolen-passport">Cancel a lost or stolen passport</a>
-                    </li>
-                    <li>
-                        <a href="https://www.gov.uk/passport-services-disabled">Passport services if you're disabled</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
     </div>
-  </div>
-</div>
 
 {% endblock %}
