--- a/app/views/help/about-our-services-gov-uk.html
+++ b/app/views/help/about-our-services-gov-uk.html
@@ -111,7 +111,7 @@
                             <td class="govuk-table__cell">Change of details</td>
                             <td class="govuk-table__cell">3 weeks</td>
                             <td class="govuk-table__cell">1 week after appointment</td>
-                            <td class="govuk-table__cell">Not applicable</td>
+                            <td class="govuk-table__cell">Day of appointment</td>
                         </tr>
                         <tr class="govuk-table__row">
                             <td class="govuk-table__cell">Apply for a first passport</td>
