--- a/app/views/apply/application-summary.html
+++ b/app/views/apply/application-summary.html
@@ -83,15 +83,16 @@
         {# How long it takes #}
         <h2>How long it takes</h2>
         {% if values.applicationType == "first" and values.adultOrChild == "adult" %}
-            <p>You'll need to allow up to 10 weeks to get a new passport.</p>
-            {% call hmpoInsetText() %}
-        <p>Do not book travel until you've got your passport.</p>
-        {% endcall %}
+            {# SLA content WITHOUT 10 weeks reference #}            
+                <p><a href="../help/about-our-services-gov-uk" target="_blank">Check how long it will take to get your passport</a> before you continue.</p>
+                
+            {# SLA content WITH 10 weeks reference #}            
+                {# <p><a href="../help/about-our-services-gov-uk" target="_blank">Check how long passport applications are taking</a> before you continue. It could take up to 10 weeks to get your passport.</p>  #}
         {% else %}
-            <p>You'll need to allow up to 10 weeks to get a new passport.</p>
-        {% call hmpoInsetText() %}
-        <p>Do not book travel until you've got your passport.</p>
-        {% endcall %}
+            <p><a href="../help/about-our-services-gov-uk" target="_blank">Check how long it will take to get your passport</a> before you continue.</p>
+                
+            {# SLA content WITH 10 weeks reference #}            
+                {# <p><a href="../help/about-our-services-gov-uk" target="_blank">Check how long passport applications are taking</a> before you continue. It could take up to 10 weeks to get your passport.</p>  #}
         {#
         { FTC }
         {% if values.applicationType == "first" and values.adultOrChild == "child" %}
@@ -136,6 +137,11 @@
                  { Use a different service if you need to <a href="https://www.gov.uk/get-a-passport-urgently">get a passport urgently</a>. }
                  </p>
             {% endif %} #}
+
+                    {% call hmpoInsetText() %}
+            <p>Do not book travel until you've got your passport.</p>
+        {% endcall %}
+            
 
         {% endif %}
 
