--- a/app/views/start.html
+++ b/app/views/start.html
@@ -61,10 +61,10 @@
                 <h2>How long it takes</h2>   
 
                 {# SLA content WITHOUT 10 weeks reference #}            
-                <p><a href="../help/about-our-services-gov-uk" target="_blank">Check how long it will take to get your passport</a> before you apply.</p>
+                {#<p><a href="../help/about-our-services-gov-uk" target="_blank">Check how long it will take to get your passport</a> before you apply.</p>#} 
                 
                 {# SLA content WITH 10 weeks reference #}            
-                {# <p><a href="../help/about-our-services-gov-uk" target="_blank">Check how long passport applications are taking </a>before you apply. It could take up to 10 weeks to get your passport.</p> #}
+                <p><a href="../help/about-our-services-gov-uk" target="_blank">Check how long passport applications are taking</a> before you apply. It could take up to 10 weeks to get your passport.</p>
 
                 <p>You can <a href="https://www.gov.uk/get-a-passport-urgently">get a passport urgently</a> if you need one sooner.</p>
                 <p>Do not book travel until you have a valid passport - your new passport will not have the same number as your old one.</p>
