add surge photo changes v2 labs to archive page and minor content change

--- a/app/views/apply/new-passport.html
+++ b/app/views/apply/new-passport.html
@@ -48,7 +48,7 @@
 
         {{ hmpoCheckboxes(ctx, {
             id: "braille",
-            label: "I need a braille sticker",
+            label: "I’m blind or visually impaired and I need a braille sticker",
             classes: "govuk-checkboxes--small"
         }) }}
 
