--- a/app/views/archive.html
+++ b/app/views/archive.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 
-{% block cookieBanner %}
-{% endblock %}
+{% set disableCookieBanner = true %}
 
 {% set hmpoTitle %}Archive{% endset %}
 
@@ -38,6 +37,7 @@
     <p>Lab days (remote labs)</p>
     <ul class="govuk-list govuk-list--bullet">
         <li><a href="https://hmpo-210525-surge-changes.herokuapp.com/">25 May 2021</a></li>
+        <li><a href="https://hmpo-210713-surge-changes-v2.herokuapp.com/">13 July 2021</a></li>
     </ul>
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
