--- a/app/views/apply/naturalisation-details.html
+++ b/app/views/apply/naturalisation-details.html
@@ -12,35 +12,6 @@
         width: 80%;
     }
     </style>
-
-    {% if values.adultOrChild == 'child' %}
-        {% call hmpoSidebar({ attributes: { "aria-hidden": true }, classes: "hmpo-sidebar__small-image" }) %}
-            <h2>Where to find your certificate number</h2>
-            <ul class="photo-guide-photos" aria-hidden="true" style="margin-bottom: 0px;">
-                <li>
-                    <a rel="opener" href="/help/registration-certificate-example" target="_blank">
-                        <img src="/public/images/nat-cert-example.png" alt="Example registration certificate" style="margin-bottom: 10px; border: 1px solid #b1b4b6;">
-                    </a>
-                </li>
-            </ul>
-            <div class="govuk-hint">
-                Click on the image to view it (opens in a new window)
-            </div>
-        {% endcall %}
-    {% else %}
-        {% call hmpoSidebar({ attributes: { "aria-hidden": true }, classes: "hmpo-sidebar__small-image" }) %}
-            <h2>Where to find your certificate number</h2>
-            <a class="photo-guide-photos" rel="opener" href="/help/naturalisation-certificate-example" target="_blank">
-                <img src="/public/images/nat-cert-example.png" alt="Example registration naturalisation" style="margin-bottom: 10px; border: 1px solid #b1b4b6;">
-            </a>
-            <a class="photo-guide-photos" rel="opener" href="/help/registration-certificate-example" target="_blank">
-                <img src="/public/images/nat-cert-example.png" alt="Example registration certificate" style="margin-bottom: 10px; border: 1px solid #b1b4b6;">
-            </a>
-            <div class="govuk-hint">
-                Click on an image to view it (opens in a new window)                
-            </div>
-        {% endcall %}
-    {% endif %}
     <h1 id="header">{{ hmpoTitle }}</h1>
 
     {% call hmpoForm(ctx) %}
@@ -68,5 +39,44 @@
         {{ hmpoSubmit(ctx) }}
 
     {% endcall %}
+
+    {% if values.adultOrChild == 'child' %}
+        {% call hmpoSidebar({ attributes: { "aria-hidden": true }, classes: "hmpo-sidebar__small-image" }) %}
+            <h2>Where to find your certificate number</h2>
+            <ul class="photo-guide-photos" aria-hidden="true" style="margin-bottom: 0px;">
+                <li>
+                    <a rel="opener" href="/help/registration-example-number" target="_blank">
+                        <img src="/public/images/registration_certificate_example_number.svg" alt="Example registration certificate" style="margin-bottom: 10px;">
+                    </a>
+                </li>
+            </ul>
+            <div class="govuk-hint">
+                Click on the image to view it (opens in a new window)
+            </div>
+        {% endcall %}
+        <style>
+            .govuk-main-wrapper{
+                padding-bottom: 50px;
+            }
+        </style>
+    {% else %}
+        {% call hmpoSidebar({ attributes: { "aria-hidden": true }, classes: "hmpo-sidebar__small-image" }) %}
+            <h2>Where to find your certificate number</h2>
+            <a class="photo-guide-photos" rel="opener" href="/help/naturalisation-example-number" target="_blank">
+                <img src="/public/images/naturalisation_certificate_example_number.svg" alt="Example naturalisation certificate " style="margin-bottom: 10px;">
+            </a>
+            <a class="photo-guide-photos" rel="opener" href="/help/registration-example-number" target="_blank">
+                <img src="/public/images/registration_certificate_example_number.svg" alt="Example registration certificate" style="margin-bottom: 10px;">
+            </a>
+            <div class="govuk-hint">
+                Click on an image to view it (opens in a new window)                
+            </div>
+        {% endcall %}
+        <style>
+            .govuk-main-wrapper{
+                padding-bottom: 450px;
+            }
+        </style>
+    {% endif %}
  
 {% endblock %}
