--- a/app/views/help/registration-certificate-example.html
+++ b/app/views/help/registration-certificate-example.html
@@ -6,16 +6,14 @@
 
     <style>
         .box {
-            {# box-shadow: 3px 3px 5px 5px #ccc; #}
-            border: 1px solid #b1b4b6;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
         } 
     </style>
 
     <h1>{{ hmpoTitle }}</h1>
 
     <div class="box">
-        <img id="firstcert" src="/public/images/nat-cert-example.png"  alt="Example registration certificate" style="width: 100%">
+        <img id="firstcert" src="/public/images/registration_certificate_example.svg"  alt="Example registration certificate" style="width: 100%; box-shadow: 3px 3px 5px 5px #ccc;">
     </div>
 
 {% endblock %}
