--- a/app/views/archive.html
+++ b/app/views/archive.html
@@ -49,6 +49,9 @@
     <ul class="govuk-list govuk-list--bullet">
         <li><a href="https://hmpo-210330-dps-con.herokuapp.com/">30 March 2021</a></li>
     </ul>
+    <ul class="govuk-list govuk-list--bullet">
+        <li><a href="https://hmpo-210706-dps-con-v2.herokuapp.com/">06 July 2021</a></li>
+    </ul>
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
