--- a/app/views/apply/birth.html
+++ b/app/views/apply/birth.html
@@ -1,6 +1,6 @@
 {% extends "layout-apply.html" %}
 
-{% set hmpoTitle %}Were you born in the UK?{% endset %}
+{% set hmpoTitle %}Were you born in the UK or somewhere else?{% endset %}
 
 {% set townOfBirthHint %}
     {% if values.applicationType == 'replace' %}
